tests/analyze/non-function-call/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `int`, but found `int -> 's`.
> 1 | def x = 42
      ^

